match history shows message of empty match history

--- a/frontend/pong-app/projects/pong/src/app/match-history/match-history.component.css
+++ b/frontend/pong-app/projects/pong/src/app/match-history/match-history.component.css
@@ -17,6 +17,7 @@
     justify-content: space-between;
     color: #666;
     font-size: 0.9em;
+    gap: 20px;
   }
   .match-details {
     display: flex;
