--- a/frontend/pong-app/projects/pong/src/app/match-history/match-history.component.html
+++ b/frontend/pong-app/projects/pong/src/app/match-history/match-history.component.html
@@ -1,5 +1,5 @@
 <div class="match-history">
-    <h3>Match History</h3>
+    <h3>Match History of {{currentUsername}} </h3>
     <div class="matches-list">
         <div *ngIf="matches.length === 0" class="empty-message">
             No matches played yet
