Changes for tokens to work

--- a/frontend/pong-app/projects/pong/src/app/signup/signup.component.html
+++ b/frontend/pong-app/projects/pong/src/app/signup/signup.component.html
@@ -1,4 +1,5 @@
 <div class="singin-area container-fluid d-flex justify-content-center align-items-center">
+  <h2 class="login-title text-center mb-4">Sign up</h2>
   <form [formGroup]="signupForm" (ngSubmit)="onSubmit()">
     <div class="formGroup">
       <label for="username">Username</label>
