--- a/frontend/pong-app/projects/pong/src/app/home/home.component.html
+++ b/frontend/pong-app/projects/pong/src/app/home/home.component.html
@@ -11,7 +11,8 @@
                     <button routerLink="/tournament"class="btn btn-custom" id="play-tournament">TORNEO</button>
                 </div>
                 <div class="col-12 mb-3">
-                    <button class="btn btn-custom" id="play-tutorial">TUTORIAL</button>
+                    <button (click)="isTutorialVisible = !isTutorialVisible" class="btn btn-custom" id="play-tutorial">TUTORIAL</button>
+                    <img *ngIf="isTutorialVisible" src="assets/tutorial.jpg" alt="Tutorial" style="width: 100%; margin-top: 10px;">
                 </div>
                 <div class="col-12 col-md-6 mb-3" *ngIf="!isLoggedIn">
                     <button routerLink="/login" class="btn btn-login" id="btn-login">LOG IN</button>
