--- a/frontend/pong-app/projects/pong/src/app/pong-game/dualplayer/pong-game.component.css
+++ b/frontend/pong-app/projects/pong/src/app/pong-game/dualplayer/pong-game.component.css
@@ -29,3 +29,30 @@ canvas {
   text-align: center; /* Centra el texto */
   margin-top: 20px; /* Espacio arriba del mensaje */
 }
+
+.game-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+}
+
+.home-button-container {
+  margin-top: 20px;
+  text-align: center;
+}
+
+.back-home-btn {
+  background-color: rgb(220, 0, 0);
+  color: white;
+  font-size: 20px;
+  padding: 8px 16px;
+  border-radius: 12px;
+  border: none;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.back-home-btn:hover {
+  background-color: rgb(181, 0, 0);
+}
