--- a/frontend/pong-app/projects/pong/src/app/signup/signup.component.html
+++ b/frontend/pong-app/projects/pong/src/app/signup/signup.component.html
@@ -1,11 +1,11 @@
 <div class="singin-area container-fluid d-flex justify-content-center align-items-center">
-  <h2 class="login-title text-center mb-4">Sign up</h2>
+  <h2 class="login-title text-center mb-4" i18n>Sign up</h2>
   <form [formGroup]="signupForm" (ngSubmit)="onSubmit()">
     <div class="formGroup">
-      <label for="username">Username</label>
+      <label for="username" i18n>Username</label>
       <input id="username" formControlName="username">
       <div *ngIf="signupForm.get('username')?.touched && signupForm.get('username')?.invalid">
-        <small class="text-danger">Invalid username</small>
+        <small class="text-danger" i18n>Invalid username</small>
       </div>
       <div *ngIf="usernameError">
         <small class="text-danger">{{ usernameError }}</small>
@@ -13,10 +13,10 @@
     </div>
 
     <div class="formGroup">
-      <label for="email">Email</label>
+      <label for="email" i18n>Email</label>
       <input id="email" formControlName="email">
       <div *ngIf="signupForm.get('email')?.touched && signupForm.get('email')?.invalid">
-        <small class="text-danger">Invalid email</small>
+        <small class="text-danger" i18n>Invalid email</small>
       </div>
       <div *ngIf="emailError">
         <small class="text-danger">{{ emailError }}</small>
@@ -24,10 +24,10 @@
     </div>
 
     <div class="formGroup">
-      <label for="password">Password</label>
+      <label for="password" i18n>Password</label>
       <input id="password" type="password" formControlName="password">
       <div *ngIf="signupForm.get('password')?.touched && signupForm.get('password')?.invalid">
-        <small class="text-danger">Invalid password</small>
+        <small class="text-danger" i18n>Invalid password</small>
       </div>
       <div *ngIf="passwordError">
         <small class="text-danger">{{ passwordError }}</small>
@@ -35,13 +35,13 @@
     </div>
 
     <div class="formGroup">
-      <label for="password2">Repeat password</label>
+      <label for="password2" i18n>Repeat password</label>
       <input id="password2" type="password" formControlName="password2">
       <div *ngIf="signupForm.get('password2')?.touched && signupForm.get('password2')?.invalid">
-        <small class="text-danger">Invalid password</small>
+        <small class="text-danger" i18n>Invalid password</small>
       </div>
     </div>
 
-    <button class="submit-singin-btn" type="submit">Sign up</button>
+    <button class="submit-singin-btn" type="submit" i18n>Sign up</button>
   </form>
 </div>
