--- a/frontend/pong-app/projects/pong/src/app/pong-game/dualplayer/pong-game.component.html
+++ b/frontend/pong-app/projects/pong/src/app/pong-game/dualplayer/pong-game.component.html
@@ -7,7 +7,7 @@
   <div class="winner-message"></div>
   @if (gameEnded) {
     <div class="home-button-container">
-      <button class="back-home-btn" routerLink="/">Back to Home</button>
+      <button class="back-home-btn" routerLink="/" i18n>Back to Home</button>
     </div>
   }
 </div>
