no se como hacer que el idioma se pueda cambiar en un mismo serve

--- a/frontend/pong-app/projects/pong/src/app/home/home.component.html
+++ b/frontend/pong-app/projects/pong/src/app/home/home.component.html
@@ -1,4 +1,10 @@
-
+<ul>
+    <li *ngFor="let locale of localesList">
+      <a href="/{{locale.code}}/">
+        {{locale.label}}
+      </a>
+    </li>
+  </ul>
         <div class="button-area" id="button-area">
             <div class="row">
                 <div class="col-12 mb-3" >
